example report creation

--- a/examples/report_creation/example_report_creation.ipynb
+++ b/examples/report_creation/example_report_creation.ipynb
@@ -9,6 +9,29 @@
     " - a csv summarizing the important magnetic data (sample info, Msat, chi_max, etc.)\n",
     " - files containing simplified versions of the magnetometry data (removing unnecessary columns and header info from the .rw files and reported magnetization as mass corrected)\n",
     "\n",
+    "`/example_dir` is the directory that contains datasets, with datasets being grouped into subdirectories by sample name. The directory structure (with created files specific to this notebook) is as follows:\n",
+    "```\n",
+    "/example_dir\n",
+    "    /sample1\n",
+    "        /figures\n",
+    "            mvsh_20C_zoom.png\n",
+    "            mvsh_20C.png\n",
+    "            zfcfc_normalized.png\n",
+    "            zfcfc.png\n",
+    "        /qd_files\n",
+    "            sample1.dat\n",
+    "            sample1_00001.dat\n",
+    "            sample1_00002.dat\n",
+    "            ...\n",
+    "        /simplified_data\n",
+    "            sample1_fc_100Oe.csv\n",
+    "            sample1_fc_1000Oe.csv\n",
+    "            sample1_MvsH_20C.csv\n",
+    "            sample1_zfc_100Oe.csv\n",
+    "            sample1_zfc_1000Oe.csv\n",
+    "        sample1_summary.csv\n",
+    "```\n",
+    "\n",
     "One area for improvement is the actual .doc/.pdf report creation, which is currently manually made by copying old report docx files. There are Python packages for doing this. "
    ]
   },
