change to pyproject.toml, update report creation

--- a/examples/report_creation/example_report_creation.ipynb
+++ b/examples/report_creation/example_report_creation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,6 +72,16 @@
       "[4] \t ['FC, 1000'] \t 101022_00004.dat\n",
       "[5] \t ['MvsH, 20 C'] \t 101022_00006.dat\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['zfc_100', 'fc_100', 'zfc_1000', 'fc_1000', 'mvsh_20'])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -85,36 +96,35 @@
     "    simplified_data_folder.mkdir(parents=True)\n",
     "\n",
     "\n",
+    "measurements: dict[str, mp.QDFile] = {}\n",
     "for i, file in enumerate(files):\n",
     "    qdfile = mp.QDFile(file)\n",
-    "    print(f\"[{i}] \\t {qdfile.comments} \\t {file.name}\")"
+    "    print(f\"[{i}] \\t {qdfile.comments} \\t {file.name}\")\n",
+    "    if \"ZFC, 100\" in qdfile.comments:\n",
+    "            measurements[\"zfc_100\"] = qdfile\n",
+    "            continue\n",
+    "    elif \"ZFC, 1000\" in qdfile.comments:\n",
+    "        measurements[\"zfc_1000\"] = qdfile\n",
+    "        continue\n",
+    "    elif \"FC, 100\" in qdfile.comments:\n",
+    "        measurements[\"fc_100\"] = qdfile\n",
+    "        continue\n",
+    "    elif \"FC, 1000\" in qdfile.comments:\n",
+    "        measurements[\"fc_1000\"] = qdfile\n",
+    "        continue\n",
+    "    elif \"Quidel M vs T\" in qdfile.comments:\n",
+    "        measurements[\"quidel_highT\"] = qdfile\n",
+    "        continue\n",
+    "    elif \"MvsH, 20 C\" in qdfile.comments:\n",
+    "        measurements[\"mvsh_20\"] = qdfile\n",
+    "        continue\n",
+    "\n",
+    "measurements.keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check the indices above before assigning files to variables\n",
-    "zfc_100 = mp.QDFile(files[1])\n",
-    "fc_100 = mp.QDFile(files[2])\n",
-    "zfc_1000 = mp.QDFile(files[3])\n",
-    "fc_1000 = mp.QDFile(files[4])\n",
-    "mvsh_20 = mp.QDFile(files[5])\n",
-    "\n",
-    "measurements = [\n",
-    "    zfc_100,\n",
-    "    fc_100,\n",
-    "    zfc_1000,\n",
-    "    fc_1000,\n",
-    "    mvsh_20,\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,8 +142,8 @@
     "fname = figure_folder / \"zfcfc.png\"\n",
     "fig, ax = mp.plot_zfcfc(\n",
     "    [\n",
-    "        (zfc_100, fc_100),\n",
-    "        (zfc_1000, fc_1000),\n",
+    "        (measurements[\"zfc_100\"], measurements[\"fc_100\"]),\n",
+    "        (measurements[\"zfc_1000\"], measurements[\"fc_1000\"]),\n",
     "    ],\n",
     "    y_val=\"Moment_per_mass\",\n",
     "    labels=[\"100 Oe\", \"1000 Oe\"],\n",
@@ -145,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +173,8 @@
     "fname = figure_folder / \"zfcfc_normalized.png\"\n",
     "fig, ax = mp.plot_zfcfc(\n",
     "    [\n",
-    "        (zfc_100, fc_100),\n",
-    "        (zfc_1000, fc_1000),\n",
+    "        (measurements[\"zfc_100\"], measurements[\"fc_100\"]),\n",
+    "        (measurements[\"zfc_1000\"], measurements[\"fc_1000\"]),\n",
     "    ],\n",
     "    y_val=\"Moment_per_mass\",\n",
     "    labels=[\"100 Oe\", \"1000 Oe\"],\n",
@@ -176,6 +186,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -184,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -202,19 +213,19 @@
     "# create a csv file with a summary of the data\n",
     "summary_csv_path = parent_folder / (sample_name + \"_summary.csv\")\n",
     "\n",
-    "zfc_100_T_maxM = zfc_100.parsed_data.loc[\n",
-    "    zfc_100.parsed_data[\"Moment_per_mass\"].idxmax()\n",
+    "zfc_100_T_maxM = measurements[\"zfc_100\"].parsed_data.loc[\n",
+    "    measurements[\"zfc_100\"].parsed_data[\"Moment_per_mass\"].idxmax()\n",
     "][\"Temperature (K)\"]\n",
-    "zfc_1000_T_maxM = zfc_1000.parsed_data.loc[\n",
-    "    zfc_1000.parsed_data[\"Moment_per_mass\"].idxmax()\n",
+    "zfc_1000_T_maxM = measurements[\"zfc_1000\"].parsed_data.loc[\n",
+    "    measurements[\"zfc_1000\"].parsed_data[\"Moment_per_mass\"].idxmax()\n",
     "][\"Temperature (K)\"]\n",
     "\n",
     "# determine max M (M_sat substitute given curvature)\n",
-    "msat = mvsh_20.parsed_data[\"Moment_per_mass\"].max()\n",
+    "msat = measurements[\"mvsh_20\"].parsed_data[\"Moment_per_mass\"].max()\n",
     "# graphically finding Hc\n",
     "mvsh = pd.DataFrame()\n",
-    "mvsh[\"field\"] = mvsh_20.parsed_data[\"Magnetic Field (Oe)\"]\n",
-    "mvsh[\"moment\"] = mvsh_20.parsed_data[\"DC Moment Free Ctr (emu)\"]\n",
+    "mvsh[\"field\"] = measurements[\"mvsh_20\"].parsed_data[\"Magnetic Field (Oe)\"]\n",
+    "mvsh[\"moment\"] = measurements[\"mvsh_20\"].parsed_data[\"DC Moment Free Ctr (emu)\"]\n",
     "mvsh[\"direction\"] = mvsh[\"field\"].diff()\n",
     "mvsh = mvsh[mvsh[\"direction\"] > 0]\n",
     "hc = mvsh[mvsh[\"moment\"] > 0]\n",
@@ -227,8 +238,8 @@
     "hc\n",
     "# finding chi_max\n",
     "mvsh = pd.DataFrame()\n",
-    "mvsh[\"field\"] = mvsh_20.parsed_data[\"Magnetic Field (Oe)\"]\n",
-    "mvsh[\"moment\"] = mvsh_20.parsed_data[\"DC Moment Free Ctr (emu)\"]\n",
+    "mvsh[\"field\"] = measurements[\"mvsh_20\"].parsed_data[\"Magnetic Field (Oe)\"]\n",
+    "mvsh[\"moment\"] = measurements[\"mvsh_20\"].parsed_data[\"DC Moment Free Ctr (emu)\"]\n",
     "mvsh[\"direction\"] = mvsh[\"field\"].diff()\n",
     "mvsh = mvsh[mvsh[\"direction\"] > 0]\n",
     "deriv = np.diff(mvsh[\"moment\"]) / np.diff(mvsh[\"field\"])\n",
@@ -243,16 +254,16 @@
     "\n",
     "summary = [\n",
     "    f\"Name,{sample_name}\\n\",\n",
-    "    f\"Mass (mg), {mvsh_20.sample_info.mass}\\n\",\n",
+    "    f\"Mass (mg), {measurements['mvsh_20'].sample_info.mass}\\n\",\n",
     "    \"\\n\",\n",
     "    \"[MAGNETIZATION VS TEMP]\\n\",\n",
     "    \"Field (Oe),T_B (max in ZFC) (T)\\n\",\n",
-    "    f'{zfc_100.parsed_data[\"Magnetic Field (Oe)\"].unique()[0]}, {zfc_100_T_maxM}\\n',\n",
-    "    f'{zfc_1000.parsed_data[\"Magnetic Field (Oe)\"].unique()[0]}, {zfc_1000_T_maxM}\\n',\n",
+    "    f'{measurements[\"zfc_100\"].parsed_data[\"Magnetic Field (Oe)\"].unique()[0]}, {zfc_100_T_maxM}\\n',\n",
+    "    f'{measurements[\"zfc_1000\"].parsed_data[\"Magnetic Field (Oe)\"].unique()[0]}, {zfc_1000_T_maxM}\\n',\n",
     "    \"\\n\",\n",
     "    \"[MAGNETIZATION VS FIELD]\\n\",\n",
     "    \"Temperature (C), M_sat (emu/g), H_c (Oe), chi_max (emu/g/Oe)\\n\",\n",
-    "    f'{mvsh_20.parsed_data[\"Temperature (K)\"].unique()[0]-273.15},{msat},{hc},{chi_max}\\n',\n",
+    "    f'{measurements[\"mvsh_20\"].parsed_data[\"Temperature (K)\"].unique()[0]-273.15},{msat},{hc},{chi_max}\\n',\n",
     "    \"\\n\",\n",
     "]\n",
     "\n",
@@ -263,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +291,7 @@
    "source": [
     "fname = figure_folder / \"mvsh_20C.png\"\n",
     "mp.plot_mvsh(\n",
-    "    mvsh_20,\n",
+    "    measurements[\"mvsh_20\"],\n",
     "    y_val=\"Moment_per_mass\",\n",
     "    title=sample_name,\n",
     "    labels=\"20 $^{\\circ}$C\",\n",
@@ -293,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +321,7 @@
    "source": [
     "fname = figure_folder / \"mvsh_20C_zoom.png\"\n",
     "mp.plot_mvsh(\n",
-    "    mvsh_20,\n",
+    "    measurements[\"mvsh_20\"],\n",
     "    y_val=\"Moment_per_mass\",\n",
     "    title=sample_name,\n",
     "    labels=\"20 $^{\\circ}$C\",\n",
@@ -322,6 +333,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,53 +384,53 @@
     "            f.writelines(line)\n",
     "\n",
     "write_simplified_data_file(\n",
-    "    data=zfc_100,\n",
+    "    data=measurements[\"zfc_100\"],\n",
     "    columns=[\"Temperature (K)\", \"Moment_per_mass\"],\n",
     "    name=sample_name,\n",
     "    path= simplified_data_folder,\n",
     "    filename=\"zfc_100Oe\",\n",
-    "    field=zfc_100.parsed_data[\"Magnetic Field (Oe)\"].unique()[0],\n",
+    "    field=measurements[\"zfc_100\"].parsed_data[\"Magnetic Field (Oe)\"].unique()[0],\n",
     "    temperature=\"\",\n",
     ")\n",
     "\n",
     "write_simplified_data_file(\n",
-    "    data=fc_100,\n",
+    "    data=measurements[\"fc_100\"],\n",
     "    columns=[\"Temperature (K)\", \"Moment_per_mass\"],\n",
     "    name=sample_name,\n",
     "    path= simplified_data_folder,\n",
     "    filename=\"fc_100Oe\",\n",
-    "    field=fc_100.parsed_data[\"Magnetic Field (Oe)\"].unique()[0],\n",
+    "    field=measurements[\"fc_100\"].parsed_data[\"Magnetic Field (Oe)\"].unique()[0],\n",
     "    temperature=\"\",\n",
     ")\n",
     "\n",
     "write_simplified_data_file(\n",
-    "    data=zfc_1000,\n",
+    "    data=measurements[\"zfc_1000\"],\n",
     "    columns=[\"Temperature (K)\", \"Moment_per_mass\"],\n",
     "    name=sample_name,\n",
     "    path= simplified_data_folder,\n",
     "    filename=\"zfc_1000Oe\",\n",
-    "    field=zfc_1000.parsed_data[\"Magnetic Field (Oe)\"].unique()[0],\n",
+    "    field=measurements[\"zfc_1000\"].parsed_data[\"Magnetic Field (Oe)\"].unique()[0],\n",
     "    temperature=\"\",\n",
     ")\n",
     "\n",
     "write_simplified_data_file(\n",
-    "    data=fc_1000,\n",
+    "    data=measurements[\"fc_1000\"],\n",
     "    columns=[\"Temperature (K)\", \"Moment_per_mass\"],\n",
     "    name=sample_name,\n",
     "    path= simplified_data_folder,\n",
     "    filename=\"fc_1000Oe\",\n",
-    "    field=fc_1000.parsed_data[\"Magnetic Field (Oe)\"].unique()[0],\n",
+    "    field=measurements[\"fc_1000\"].parsed_data[\"Magnetic Field (Oe)\"].unique()[0],\n",
     "    temperature=\"\",\n",
     ")\n",
     "\n",
     "write_simplified_data_file(\n",
-    "    data=mvsh_20,\n",
+    "    data=measurements[\"mvsh_20\"],\n",
     "    columns=[\"Magnetic Field (Oe)\", \"Moment_per_mass\"],\n",
     "    name=sample_name,\n",
     "    path= simplified_data_folder,\n",
     "    filename=\"MvsH_20C\",\n",
     "    field=\"\",\n",
-    "    temperature=mvsh_20.parsed_data[\"Temperature (K)\"].unique()[0],\n",
+    "    temperature=measurements[\"mvsh_20\"].parsed_data[\"Temperature (K)\"].unique()[0],\n",
     ")"
    ]
   }
@@ -439,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
