create magnetometry example

--- a/docs/examples/zfcfc.ipynb
+++ b/docs/examples/zfcfc.ipynb
@@ -1258,7 +1258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting Multiple `ZFCFC` Experiments\n",
+    "### Plotting Multiple `ZFCFC` Experiments\n",
     "\n",
     "The `plot_zfcfc()` function can also be used to plot multiple pairs of ZFC/FC experiments. In this case the first two arguments must be lists of `ZFC` and `FC` objects. The `label` argument can be used to label the curves in the legend, otherwise the field values are used as labels."
    ]
@@ -1324,7 +1324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting Raw Data\n",
+    "### Plotting Raw Data\n",
     "\n",
     "The `ZFCFC` class has `plot_raw()` and `plot_raw_residuals()` methods for plotting the raw data. These are often more convenient than the related `DatFile` methods, since the `DatFile` method would require the user to slice out ZFC or FC data from a file which contained both."
    ]
