fix report creation cell in magnetometry example

--- a/docs/examples/magnetometry.ipynb
+++ b/docs/examples/magnetometry.ipynb
@@ -873,7 +873,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aborting report creation.\n"
+      "Report written to dataset1.json\n"
      ]
     }
    ],
