--- a/docs/examples/cauchy.ipynb
+++ b/docs/examples/cauchy.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "Magnetic hysteresis data is typically reported in literature by plotting the data and recording the values of the saturation magnetization, coercive field, and sometimes the remnant magnetization. These values do a poor job of capturing the full field dependence of the data and, in the case of molecular magnetism, completely miss features related to quantum tunneling of magnetization or other phenomenon causing step-like behavior in the hysteresis data.\n",
     "\n",
-    "The Rinehart group has published papers studying magnetic hysteresis data of both magnetic nanoparticles ([Kirkpatrick, et al. Chem. Sci. 2023](https://pubs.rsc.org/en/content/articlelanding/2023/SC/D3SC02113K)) and single molecule magnets ([Orlova, et al. JACS 2023](https://pubs.acs.org/doi/full/10.1021/jacs.3c08946#)) using a method of quantification based on fitting the data to a Cauchy distribution function. The original code for these works were initially published in [cauchy_single](https://github.com/RinehartGroup/Cauchy_Single) and [multi_cauchy](https://github.com/RinehartGroup/multi_cauchy), and has been refactored to work in the MagnetoPy system.\n",
+    "The Rinehart group has published papers studying magnetic hysteresis data of both magnetic nanoparticles ([Kirkpatrick, et al. Chem. Sci. 2023](https://pubs.rsc.org/en/content/articlelanding/2023/SC/D3SC02113K)) and single molecule magnets ([Orlova, et al. JACS 2023](https://pubs.acs.org/doi/full/10.1021/jacs.3c08946#)) using a method of quantification based on fitting the data to a Cauchy distribution function. The original code for these works were initially published in [cauchy_single](https://github.com/RinehartGroup/Cauchy_Single) and [multi_cauchy](https://github.com/RinehartGroup/multi_cauchy), which have been refactored to work in the MagnetoPy system.\n",
     "\n",
-    "For M vs. H data that is compatible with the `MvsH` class in MagnetoPy, the `CauchyCDFAnalysis` and `CauchyPDFAnalysis` classes comply with the `Analysis` protocol defined by MagnetoPy and will work seamlessly within `Magnetometry` objects, as shown below.\n",
+    "For data that is compatible with the `Magnetometry` and `MvsH` MagnetoPy classes, the `CauchyCDFAnalysis` and `CauchyPDFAnalysis` classes comply with the `Analysis` protocol defined by MagnetoPy and will work seamlessly within `Magnetometry` objects, as in the first section of this notebook.\n",
     "\n",
-    "Data in experimental forms or otherwise not compatible with the `MvsH` class can be analyzed using the `fit_cauchy_cdf` and `fit_cauchy_pdf` functions, as shown later in this notebook.\n",
+    "Data in experimental forms or otherwise not compatible with the `MvsH` class can be analyzed using the `fit_cauchy_cdf` and `fit_cauchy_pdf` functions, as shown in the second section of this notebook.\n",
     "\n",
     "Though not necessary, all class and function calls in this notebook will use keyword arguments to make the code more readable."
    ]
@@ -29,10 +29,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import magnetopy as mp\n",
-    "\n",
-    "dset5 = mp.Magnetometry(Path(\"../../tests/data/dataset5\"))\n",
-    "dset6 = mp.Magnetometry(Path(\"../../tests/data/dataset6\"))"
+    "import magnetopy as mp"
    ]
   },
   {
@@ -48,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +60,7 @@
     }
    ],
    "source": [
+    "dset5 = mp.Magnetometry(Path(\"../../tests/data/dataset5\"))\n",
     "fig, ax = dset5.plot_mvsh()"
    ]
   },
@@ -290,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +303,7 @@
     }
    ],
    "source": [
+    "dset6 = mp.Magnetometry(Path(\"../../tests/data/dataset6\"))\n",
     "fig, ax = dset6.plot_mvsh(temperatures=[2,4,6,8], segment=\"loop\")"
    ]
   },
