--- a/docs/examples/cauchy.ipynb
+++ b/docs/examples/cauchy.ipynb
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now for the `CaucyPDFAnalysis` class:"
+    "And now for the `CauchyPDFAnalysis` class:"
    ]
   },
   {
@@ -568,7 +568,7 @@
    "source": [
     "## Working with Non-MagnetoPy-compatible Data\n",
     "\n",
-    "The following section repeats the work above but using the `fit_cauchy_cdf` and `fit_cauchy_pdf` functions. These functions are available in the event that your data does not conform to the `Magnetometry` and `MvsH` classes in MagnetoPy. Ultiamtely these functions only require `x` and `y` data, along with the number of terms to fit or a `CauchyFittingArgs` object.\n",
+    "The following section repeats the work above but using the `fit_cauchy_cdf` and `fit_cauchy_pdf` functions. These functions are available in the event that your data does not conform to the `Magnetometry` and `MvsH` classes in MagnetoPy. Ultimately these functions only require `x` and `y` data, along with the number of terms to fit or a `CauchyFittingArgs` object.\n",
     "\n",
     "### Single-Term Example\n",
     "\n",
